--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_personal') }}">Personal Info</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -39,24 +42,26 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Contact</h5>
-                    <p>Email: your.email@example.com</p>
-                    <p>Phone: +1 234 567 890</p>
+                    <p>Email: exemple.email@univ-st-etienne.fr</p>
+                    <p>Phone: +33 7 xx xx xx xx</p>
                 </div>
                 <div class="col-md-6">
                     <h5>Social Media</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-light">LinkedIn</a></li>
-                        <li><a href="#" class="text-light">GitHub</a></li>
-                        <li><a href="#" class="text-light">Twitter</a></li>
+                        <li><a href="#" class="text-light"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></li>
+                        <li><a href="#" class="text-light"><i class="fa-brands fa-github"></i> GitHub</a></li>
+                        <li><a href="#" class="text-light"><i class="fa-brands fa-meta"></i> Twitter</a></li>
                     </ul>
                 </div>
             </div>
             <hr>
-            <p class="text-center mb-0">&copy; 2023 Your Name. All rights reserved.</p>
+            <p class="text-center mb-0">&copy; 2025 Sotty Vincent. All rights reserved.</p>
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    {% block javascripts %}{% endblock %}
+    {% block javascripts %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://kit.fontawesome.com/b46286acd6.js" crossorigin="anonymous"></script>
+    {% endblock %}
 </body>
 </html>
