--- a/templates/blog/portfolio/page_personal.html.twig
+++ b/templates/blog/portfolio/page_personal.html.twig
@@ -105,7 +105,7 @@
                     <h3 class="card-title">Custom DarkRP Gamemode Enhancement</h3>
                     <div class="video-container">
                         <!-- Replace YOUR_VIDEO_ID with actual YouTube video ID -->
-                        <iframe src="about:blank" data-src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+                        <iframe src="about:blank" data-src="https://www.youtube.com/embed/UUMTJr9ueG0" 
                                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                 allowfullscreen></iframe>
                     </div>
@@ -131,7 +131,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Advanced Admin Tools Suite</h3>
                     <div class="video-container">
-                        <iframe src="about:blank" data-src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+                        <iframe src="about:blank" data-src="https://www.youtube.com/embed/UUMTJr9ueG0" 
                                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                 allowfullscreen></iframe>
                     </div>
@@ -160,7 +160,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Custom Server Plugin Suite</h3>
                     <div class="video-container">
-                        <iframe src="about:blank" data-src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+                        <iframe src="about:blank" data-src="https://www.youtube.com/embed/UUMTJr9ueG0" 
                                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                 allowfullscreen></iframe>
                     </div>
@@ -221,7 +221,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Composition Title 1</h3>
                             <div class="video-container">
-                                <iframe src="about:blank" data-src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+                                <iframe src="about:blank" data-src="https://www.youtube.com/embed/UUMTJr9ueG0" 
                                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                         allowfullscreen></iframe>
                             </div>
@@ -246,7 +246,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Composition Title 2</h3>
                             <div class="video-container">
-                                <iframe src="about:blank" data-src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+                                <iframe src="about:blank" data-src="https://www.youtube.com/embed/UUMTJr9ueG0" 
                                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                         allowfullscreen></iframe>
                             </div>
