--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,13 +17,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_portofolio_home') }}">Home</a>
+                        <a class="nav-link" href="{{ path('app_portofolio_home') }}">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_cv') }}">CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_personal') }}">Personal Info</a>
+                        <a class="nav-link" href="{{ path('app_skills') }}">Détails</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_personal') }}">Projets Personnels</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
